--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h2>hello </h2>
+ <h2>hello world</h2>
+ <p>hello world</p>
 </body>
 </html>
